# Living-code-OSS

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  CORPUS_BENCHMARKING_IMPLEMENTATION_SUMMARY.md  DEPENDENCY_RIGHTSIZING_SUMMARY.md  DEPLOYMENT_SUMMARY.md  Dockerfile.backend  FRONTEND_DEVELOPMENT.md  FUTURE_ARCHITECTURE_IMPLEMENTATION.md  GITHUB_SETUP.md  GPU_ACCELERATION_README.md  INSTALLATION.md  LICENSE  MCP_SERVER_IMPLEMENTATION.md  PROJECT_DESCRIPTION.md  QUICK_START.md  README-deployment.md  README.md  SECURITY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  VIDYA_DEVELOPMENT_SETUP.md  check-prerequisites.ps1  demo_future_architecture.py  demo_tokenizer.py  dev-server.py  github-setup-complete.ps1  init-github-repo.ps1  pyproject.toml  pytest.ini  quantum_ai_crypto_em_scheduler_prototype_plan.md  quick_demo.py  reasoning_core_demo.py  requirements-dev.txt  requirements.txt  requirements_basic.txt  requirements_llm.txt  (+34 more)
benchmark_results/: corpus_benchmark_report_20250812_141825.txt  corpus_benchmark_report_20250812_184450.txt  math_programming_report_20250812_141811.txt  math_programming_report_20250812_184450.txt  optimization_recommendations_20250812_141811.txt  optimization_recommendations_20250812_141825.txt  optimization_recommendations_20250812_184451.txt  scalability_report_20250812_184451.txt
cloud/: __init__.py  aws_integration.py
config/: __init__.py  environments.py
docker/: Dockerfile.rocm
docs/: ARCHITECTURE.md  CONSOLIDATION_CHECKLIST.md  ROADMAP.md  api_reference.md  contributing_guide.md  developer_guide.md  faq.md  in_system_help.md  index.md  knowledge_base.md  linguist_guide.md  llm_integration_guide.md  migration_guide.md  multi_domain_mapping_summary.md  performance_optimization_summary.md  performance_tuning_guide.md  researcher_guide.md  setup_guide.md  troubleshooting.md  user_guide_complete.md  video_tutorial_scripts.md
examples/: hybrid_reasoning_demo.py  knowledge_evolution_demo.py  llm_integration_demo.py  mcp_server_demo.py  morphological_analysis_demo.py  multi_domain_mapping_demo.py  panini_demo.py  performance_optimization_demo.py  sanskrit_r_zero_example.py  sanskrit_reward_demo.py  symbolic_computation_demo.py
external_models/r-zero/: SANSKRIT_INTEGRATION.md
frontend/: .env.example  INTEGRATED_CANVAS_IMPLEMENTATION.md  README.md
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  index.tsx
monitoring/: __init__.py  logging_config.py  metrics.py
performance_profiles/: test_function_1754989379_1754989379.txt  test_function_1754989586_1754989586.txt  test_profile_1754989379.txt  test_profile_1754989607.txt
r_zero_storage/: sanskrit_format.jinja
sanskrit-env/: pyvenv.cfg
sanskrit-env/Scripts/: activate  activate.bat
sanskrit_rewrite_engine_old/: README_API.md  __init__.py  __main__.py  api_server.py  audit_logging.py  bidirectional_mapper.py  corpus_benchmarking.py  deployment_automation.py  derivation_simulator.py  essential_sutras.py  fallback_mechanisms.py  gemini_integration.py  gpu_acceleration.py  gpu_benchmarks.py  health_monitoring.py  hybrid_integration.py  hybrid_reasoning.py  knowledge_evolution.py  math_programming_benchmarks.py  mcp_cli.py  mcp_config.py  mcp_server.py  memory_optimization.py  morphological_analyzer.py  multi_domain_mapper.py  panini_engine.py  performance_benchmarks.py  performance_optimization.py  performance_profiler.py  r_zero_config.py  r_zero_data_format.py  r_zero_integration.py  r_zero_setup.py  reasoning_core.py  requirements.txt  rl_environment.py  rule.py  run_server.py  safe_execution.py  sanskrit_challenger.py  (+18 more)
scripts/: build-frontend.bat  build-frontend.sh  deploy-frontend.sh  deploy.ps1  deploy.sh  dev-setup.bat  dev-setup.sh  dev-start.ps1  k8s-deploy.sh  setup-dev.sh  validate.sh
src/sanskrit_rewrite_engine/: __init__.py  __main__.py  architecture_integration.py  cli.py  config.py  engine.py  enhanced_rules.py  extensible_rules.py  future_architecture.py  interfaces.py  ml_integration.py  performance.py  plugin_system.py  rules.py  server.py  tokenizer.py
tests/: README.md  __init__.py  conftest.py  run_basic_tests.py  run_comprehensive_tests.py  run_tests.py  test_future_architecture.py  test_future_architecture_simple.py
tests/fixtures/: __init__.py  mock_objects.py  sample_texts.py
tests/integration/: benchmark_reasoning_core.py  run_comprehensive_tests.py  test_api.py  test_cli.py  test_coevolution_integration.py  test_comprehensive_integration.py  (+25 more)
vidya-backend/: main.py
vidya-frontend/: index.html  vite.config.ts
vidya-quantum-interface/: ADVANCED_SHADERS_IMPLEMENTATION.md  DEVELOPMENT.md  Dockerfile.frontend  ERROR_HANDLING_IMPLEMENTATION.md  NEURAL_NETWORK_IMPLEMENTATION.md  NEURAL_NETWORK_INTERACTIVITY_IMPLEMENTATION.md  README.md  RESPONSIVE_DESIGN_IMPLEMENTATION.md  TASK_14_IMPLEMENTATION_SUMMARY.md  WEBSOCKET_IMPLEMENTATION.md  nginx.conf  package.json  vitest.config.comprehensive.ts  vitest.config.ts
vidya_quantum_interface/: __init__.py  api_server.py  feedback_integration.py  llm_config.py  llm_integration.py  quality_assessment.py  response_synthesis.py  sanskrit_adapter.py  test_synthesis.py
(+126 files in other folders)
